@@ -6,6 +6,7 @@ Overview of changes in lightdm 1.0.1
     * Link liblightdm-qt against QtGui
     * Fix liblightdm-qt crashing when face images are installed
     * Set correct permissions on session log files
+    * Prefer a locale with a codeset over one without for setting LANG 
 
 Overview of changes in lightdm 1.0.0
 
